# TelegramBot-DALL-E_2

./: README.md  pyproject.toml  requirements.txt
bot/: __main__.py
bot/commands/: __init__.py  bot_commands.py  help.py  send_generated_photo.py  start.py
bot/generation/: __init__.py  create_image.py
bot/keyboards/: __init__.py  reply_keyboard.py
